[gd_scene load_steps=20 format=3 uid="uid://c0xxf8hox50fd"]

[ext_resource type="Script" path="res://scenes/world.gd" id="1_celiw"]
[ext_resource type="Texture2D" uid="uid://bdqmqg0k71wj3" path="res://backgrounds/grass_background.png" id="1_xv5j6"]
[ext_resource type="PackedScene" uid="uid://cwrnvn4hb2vd7" path="res://player/player.tscn" id="3_a4axw"]
[ext_resource type="PackedScene" uid="uid://bdt81bf5r075j" path="res://bullets/bullet2.tscn" id="3_afa53"]
[ext_resource type="PackedScene" uid="uid://be3a5fkq6koyg" path="res://bullets/bullet3.tscn" id="4_8gaiq"]
[ext_resource type="PackedScene" uid="uid://c1dlx6rk5tnwp" path="res://player/player2.tscn" id="4_mcgov"]
[ext_resource type="PackedScene" uid="uid://du41kxsvv2i26" path="res://enemy/enemy.tscn" id="5_d4cux"]
[ext_resource type="PackedScene" uid="uid://dimdibmblswuy" path="res://bullets/bullet4.tscn" id="5_u46wc"]
[ext_resource type="PackedScene" uid="uid://ck8lewj2wpp0l" path="res://bullets/bullet5.tscn" id="6_eelsu"]
[ext_resource type="Script" path="res://enemy/EnemySpawner.gd" id="6_pkqkr"]
[ext_resource type="PackedScene" uid="uid://utx13eyr6fln" path="res://bullets/bullet6.tscn" id="6_rjuar"]
[ext_resource type="PackedScene" uid="uid://dw6fnujklh67b" path="res://bullets/bullet7.tscn" id="7_173gn"]
[ext_resource type="PackedScene" uid="uid://cwhu7le1031cr" path="res://enemy/enemy_big.tscn" id="7_t0fan"]
[ext_resource type="PackedScene" uid="uid://c8t4rlgcvhevr" path="res://bullets/bullet8.tscn" id="8_qv74j"]
[ext_resource type="Script" path="res://scenes/BulletClearer.gd" id="13_frs3j"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_b7cmc"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_kstq7"]
normal = Vector2(0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3omp8"]
size = Vector2(256, 612)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_6qyfp"]

[node name="World" type="Node2D"]
script = ExtResource("1_celiw")
BulletScenes = Array[PackedScene]([ExtResource("3_afa53"), ExtResource("4_8gaiq"), ExtResource("5_u46wc"), ExtResource("6_eelsu"), ExtResource("6_rjuar"), ExtResource("7_173gn"), ExtResource("8_qv74j")])

[node name="GrassBackground" type="Sprite2D" parent="."]
texture = ExtResource("1_xv5j6")
centered = false

[node name="BottomBorder" type="StaticBody2D" parent="."]
position = Vector2(337, 566)
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomBorder"]
shape = SubResource("WorldBoundaryShape2D_b7cmc")

[node name="LeftBorder" type="StaticBody2D" parent="."]
position = Vector2(256, 345)
rotation = 1.5708
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftBorder"]
position = Vector2(0.000152588, 48)
shape = SubResource("WorldBoundaryShape2D_b7cmc")

[node name="RightBorder" type="StaticBody2D" parent="."]
position = Vector2(1392, 378)
rotation = 4.71239
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightBorder"]
shape = SubResource("WorldBoundaryShape2D_b7cmc")

[node name="TopBorder" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopBorder"]
shape = SubResource("WorldBoundaryShape2D_kstq7")

[node name="Player" parent="." instance=ExtResource("3_a4axw")]
unique_name_in_owner = true

[node name="Player2" parent="." instance=ExtResource("4_mcgov")]
unique_name_in_owner = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HouseHealthBar" type="ProgressBar" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 51.0
offset_top = 149.0
offset_right = 303.0
offset_bottom = 176.0

[node name="GameOverLabel" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -68.5
offset_right = 300.0
offset_bottom = 68.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "你脑子没了！"

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 65
text = "0"

[node name="Spawners" type="Node2D" parent="."]

[node name="EnemySpawner" type="Marker2D" parent="Spawners"]
position = Vector2(1113, 333)
script = ExtResource("6_pkqkr")
enemy_scenes = Array[PackedScene]([ExtResource("5_d4cux"), ExtResource("7_t0fan")])

[node name="EnemySpawner2" type="Marker2D" parent="Spawners"]
position = Vector2(1113, 229)
script = ExtResource("6_pkqkr")
enemy_scenes = Array[PackedScene]([ExtResource("5_d4cux"), ExtResource("7_t0fan")])

[node name="EnemySpawner3" type="Marker2D" parent="Spawners"]
position = Vector2(1113, 133)
script = ExtResource("6_pkqkr")
enemy_scenes = Array[PackedScene]([ExtResource("5_d4cux"), ExtResource("7_t0fan")])

[node name="EnemySpawner4" type="Marker2D" parent="Spawners"]
position = Vector2(1113, 421)
script = ExtResource("6_pkqkr")
enemy_scenes = Array[PackedScene]([ExtResource("5_d4cux"), ExtResource("7_t0fan")])

[node name="EnemySpawner5" type="Marker2D" parent="Spawners"]
position = Vector2(1113, 525)
script = ExtResource("6_pkqkr")
enemy_scenes = Array[PackedScene]([ExtResource("5_d4cux"), ExtResource("7_t0fan")])

[node name="EnemyCount" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyCount"]
position = Vector2(118, 296)
shape = SubResource("RectangleShape2D_3omp8")

[node name="BulletClearer" type="Area2D" parent="."]
position = Vector2(1750, 101)
rotation = -1.57079
collision_layer = 0
collision_mask = 8
script = ExtResource("13_frs3j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletClearer"]
shape = SubResource("WorldBoundaryShape2D_6qyfp")

[connection signal="enemy_dead" from="Spawners/EnemySpawner" to="." method="count_scores"]
[connection signal="enemy_dead" from="Spawners/EnemySpawner2" to="." method="count_scores"]
[connection signal="enemy_dead" from="Spawners/EnemySpawner3" to="." method="count_scores"]
[connection signal="enemy_dead" from="Spawners/EnemySpawner4" to="." method="count_scores"]
[connection signal="enemy_dead" from="Spawners/EnemySpawner5" to="." method="count_scores"]
[connection signal="body_entered" from="EnemyCount" to="." method="_on_enemy_count_body_entered"]
[connection signal="body_entered" from="BulletClearer" to="BulletClearer" method="_on_body_entered"]
